updated the resume link and fixed he background-attachment on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,6 +276,7 @@ i {
   }
   #header {
     height: 50vh;
+    background-attachment: scroll!important;
   }
   .landingPageName,
   .jumbotronTitle {
